src/ra.output
Terminals unused in grammar

   LS
   RS
   NEWLINE
   FNAME


Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: statement
    3           | statements statement

    4 statement: SELECT_S
    5          | CREATE_S
    6          | DROP_S
    7          | DELETE_S
    8          | INSERT_S
    9          | QUIT
   10          | EXEC NAME

   11 SELECT_S: SELECT STAR FROM NAME WHERE TJS TM
   12         | SELECT STAR FROM NAME TM

   13 TJS: TJ
   14    | TJS AND TJ

   15 TJ: NAME FL INTEGER
   16   | NAME FL FF
   17   | NAME FL STRING

   18 CREATE_S: CREATE TABLE NAME CC ATTRS DD PRIM KEY CC NAME CC CC TM
   19         | CREATE INDEX NAME ON NAME CC NAME CC TM

   20 ATTRS: ATTR
   21      | ATTRS DD ATTR

   22 ATTR: NAME tCHAR CC INTEGER CC
   23     | NAME tCHAR CC INTEGER CC UNI
   24     | NAME tINT
   25     | NAME tINT UNI
   26     | NAME tFLOAT
   27     | NAME tFLOAT UNI

   28 INSERT_S: INSERT INTO NAME VALUES CC VALUESS CC TM

   29 VALUE: STRING
   30      | INTEGER
   31      | FF

   32 VALUESS: VALUE
   33        | VALUESS DD VALUE

   34 FL: mLE
   35   | mLT
   36   | mEQ
   37   | mNE
   38   | mGE
   39   | mGT

   40 DELETE_S: DELETE FROM NAME WHERE TJS TM
   41         | DELETE FROM NAME TM

   42 DROP_S: DROP TABLE NAME TM
   43       | DROP INDEX NAME TM


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING (258) 17 29
CREATE (259) 18 19
DROP (260) 42 43
SELECT (261) 11 12
INSERT (262) 28
DELETE (263) 40 41
QUIT (264) 9
EXEC (265) 10
TABLE (266) 18 42
FROM (267) 11 12 40 41
INTO (268) 28
mLT (269) 35
mLE (270) 34
mEQ (271) 36
mGT (272) 39
mGE (273) 38
mNE (274) 37
STAR (275) 11 12
tCHAR (276) 22 23
tFLOAT (277) 26 27
tINT (278) 24 25
NAME (279) 10 11 12 15 16 17 18 19 22 23 24 25 26 27 28 40 41 42 43
INTEGER (280) 15 22 23 30
FF (281) 16 31
LS (282)
RS (283)
TM (284) 11 12 18 19 28 40 41 42 43
WHERE (285) 11 40
DD (286) 18 21 33
NEWLINE (287)
VALUES (288) 28
CC (289) 18 19 22 23 28
UNI (290) 23 25 27
PRIM (291) 18
KEY (292) 18
INDEX (293) 19 43
ON (294) 19
AND (295) 14
FNAME (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
program (43)
    on left: 1, on right: 0
statements (44)
    on left: 2 3, on right: 1 3
statement (45)
    on left: 4 5 6 7 8 9 10, on right: 2 3
SELECT_S (46)
    on left: 11 12, on right: 4
TJS (47)
    on left: 13 14, on right: 11 14 40
TJ (48)
    on left: 15 16 17, on right: 13 14
CREATE_S (49)
    on left: 18 19, on right: 5
ATTRS (50)
    on left: 20 21, on right: 18 21
ATTR (51)
    on left: 22 23 24 25 26 27, on right: 20 21
INSERT_S (52)
    on left: 28, on right: 8
VALUE (53)
    on left: 29 30 31, on right: 32 33
VALUESS (54)
    on left: 32 33, on right: 28 33
FL (55)
    on left: 34 35 36 37 38 39, on right: 15 16 17
DELETE_S (56)
    on left: 40 41, on right: 7
DROP_S (57)
    on left: 42 43, on right: 6


state 0

    0 $accept: . program $end

    CREATE  shift, and go to state 1
    DROP    shift, and go to state 2
    SELECT  shift, and go to state 3
    INSERT  shift, and go to state 4
    DELETE  shift, and go to state 5
    QUIT    shift, and go to state 6
    EXEC    shift, and go to state 7

    program     go to state 8
    statements  go to state 9
    statement   go to state 10
    SELECT_S    go to state 11
    CREATE_S    go to state 12
    INSERT_S    go to state 13
    DELETE_S    go to state 14
    DROP_S      go to state 15


state 1

   18 CREATE_S: CREATE . TABLE NAME CC ATTRS DD PRIM KEY CC NAME CC CC TM
   19         | CREATE . INDEX NAME ON NAME CC NAME CC TM

    TABLE  shift, and go to state 16
    INDEX  shift, and go to state 17


state 2

   42 DROP_S: DROP . TABLE NAME TM
   43       | DROP . INDEX NAME TM

    TABLE  shift, and go to state 18
    INDEX  shift, and go to state 19


state 3

   11 SELECT_S: SELECT . STAR FROM NAME WHERE TJS TM
   12         | SELECT . STAR FROM NAME TM

    STAR  shift, and go to state 20


state 4

   28 INSERT_S: INSERT . INTO NAME VALUES CC VALUESS CC TM

    INTO  shift, and go to state 21


state 5

   40 DELETE_S: DELETE . FROM NAME WHERE TJS TM
   41         | DELETE . FROM NAME TM

    FROM  shift, and go to state 22


state 6

    9 statement: QUIT .

    $default  reduce using rule 9 (statement)


state 7

   10 statement: EXEC . NAME

    NAME  shift, and go to state 23


state 8

    0 $accept: program . $end

    $end  shift, and go to state 24


state 9

    1 program: statements .
    3 statements: statements . statement

    CREATE  shift, and go to state 1
    DROP    shift, and go to state 2
    SELECT  shift, and go to state 3
    INSERT  shift, and go to state 4
    DELETE  shift, and go to state 5
    QUIT    shift, and go to state 6
    EXEC    shift, and go to state 7

    $default  reduce using rule 1 (program)

    statement  go to state 25
    SELECT_S   go to state 11
    CREATE_S   go to state 12
    INSERT_S   go to state 13
    DELETE_S   go to state 14
    DROP_S     go to state 15


state 10

    2 statements: statement .

    $default  reduce using rule 2 (statements)


state 11

    4 statement: SELECT_S .

    $default  reduce using rule 4 (statement)


state 12

    5 statement: CREATE_S .

    $default  reduce using rule 5 (statement)


state 13

    8 statement: INSERT_S .

    $default  reduce using rule 8 (statement)


state 14

    7 statement: DELETE_S .

    $default  reduce using rule 7 (statement)


state 15

    6 statement: DROP_S .

    $default  reduce using rule 6 (statement)


state 16

   18 CREATE_S: CREATE TABLE . NAME CC ATTRS DD PRIM KEY CC NAME CC CC TM

    NAME  shift, and go to state 26


state 17

   19 CREATE_S: CREATE INDEX . NAME ON NAME CC NAME CC TM

    NAME  shift, and go to state 27


state 18

   42 DROP_S: DROP TABLE . NAME TM

    NAME  shift, and go to state 28


state 19

   43 DROP_S: DROP INDEX . NAME TM

    NAME  shift, and go to state 29


state 20

   11 SELECT_S: SELECT STAR . FROM NAME WHERE TJS TM
   12         | SELECT STAR . FROM NAME TM

    FROM  shift, and go to state 30


state 21

   28 INSERT_S: INSERT INTO . NAME VALUES CC VALUESS CC TM

    NAME  shift, and go to state 31


state 22

   40 DELETE_S: DELETE FROM . NAME WHERE TJS TM
   41         | DELETE FROM . NAME TM

    NAME  shift, and go to state 32


state 23

   10 statement: EXEC NAME .

    $default  reduce using rule 10 (statement)


state 24

    0 $accept: program $end .

    $default  accept


state 25

    3 statements: statements statement .

    $default  reduce using rule 3 (statements)


state 26

   18 CREATE_S: CREATE TABLE NAME . CC ATTRS DD PRIM KEY CC NAME CC CC TM

    CC  shift, and go to state 33


state 27

   19 CREATE_S: CREATE INDEX NAME . ON NAME CC NAME CC TM

    ON  shift, and go to state 34


state 28

   42 DROP_S: DROP TABLE NAME . TM

    TM  shift, and go to state 35


state 29

   43 DROP_S: DROP INDEX NAME . TM

    TM  shift, and go to state 36


state 30

   11 SELECT_S: SELECT STAR FROM . NAME WHERE TJS TM
   12         | SELECT STAR FROM . NAME TM

    NAME  shift, and go to state 37


state 31

   28 INSERT_S: INSERT INTO NAME . VALUES CC VALUESS CC TM

    VALUES  shift, and go to state 38


state 32

   40 DELETE_S: DELETE FROM NAME . WHERE TJS TM
   41         | DELETE FROM NAME . TM

    TM     shift, and go to state 39
    WHERE  shift, and go to state 40


state 33

   18 CREATE_S: CREATE TABLE NAME CC . ATTRS DD PRIM KEY CC NAME CC CC TM

    NAME  shift, and go to state 41

    ATTRS  go to state 42
    ATTR   go to state 43


state 34

   19 CREATE_S: CREATE INDEX NAME ON . NAME CC NAME CC TM

    NAME  shift, and go to state 44


state 35

   42 DROP_S: DROP TABLE NAME TM .

    $default  reduce using rule 42 (DROP_S)


state 36

   43 DROP_S: DROP INDEX NAME TM .

    $default  reduce using rule 43 (DROP_S)


state 37

   11 SELECT_S: SELECT STAR FROM NAME . WHERE TJS TM
   12         | SELECT STAR FROM NAME . TM

    TM     shift, and go to state 45
    WHERE  shift, and go to state 46


state 38

   28 INSERT_S: INSERT INTO NAME VALUES . CC VALUESS CC TM

    CC  shift, and go to state 47


state 39

   41 DELETE_S: DELETE FROM NAME TM .

    $default  reduce using rule 41 (DELETE_S)


state 40

   40 DELETE_S: DELETE FROM NAME WHERE . TJS TM

    NAME  shift, and go to state 48

    TJS  go to state 49
    TJ   go to state 50


state 41

   22 ATTR: NAME . tCHAR CC INTEGER CC
   23     | NAME . tCHAR CC INTEGER CC UNI
   24     | NAME . tINT
   25     | NAME . tINT UNI
   26     | NAME . tFLOAT
   27     | NAME . tFLOAT UNI

    tCHAR   shift, and go to state 51
    tFLOAT  shift, and go to state 52
    tINT    shift, and go to state 53


state 42

   18 CREATE_S: CREATE TABLE NAME CC ATTRS . DD PRIM KEY CC NAME CC CC TM
   21 ATTRS: ATTRS . DD ATTR

    DD  shift, and go to state 54


state 43

   20 ATTRS: ATTR .

    $default  reduce using rule 20 (ATTRS)


state 44

   19 CREATE_S: CREATE INDEX NAME ON NAME . CC NAME CC TM

    CC  shift, and go to state 55


state 45

   12 SELECT_S: SELECT STAR FROM NAME TM .

    $default  reduce using rule 12 (SELECT_S)


state 46

   11 SELECT_S: SELECT STAR FROM NAME WHERE . TJS TM

    NAME  shift, and go to state 48

    TJS  go to state 56
    TJ   go to state 50


state 47

   28 INSERT_S: INSERT INTO NAME VALUES CC . VALUESS CC TM

    STRING   shift, and go to state 57
    INTEGER  shift, and go to state 58
    FF       shift, and go to state 59

    VALUE    go to state 60
    VALUESS  go to state 61


state 48

   15 TJ: NAME . FL INTEGER
   16   | NAME . FL FF
   17   | NAME . FL STRING

    mLT  shift, and go to state 62
    mLE  shift, and go to state 63
    mEQ  shift, and go to state 64
    mGT  shift, and go to state 65
    mGE  shift, and go to state 66
    mNE  shift, and go to state 67

    FL  go to state 68


state 49

   14 TJS: TJS . AND TJ
   40 DELETE_S: DELETE FROM NAME WHERE TJS . TM

    TM   shift, and go to state 69
    AND  shift, and go to state 70


state 50

   13 TJS: TJ .

    $default  reduce using rule 13 (TJS)


state 51

   22 ATTR: NAME tCHAR . CC INTEGER CC
   23     | NAME tCHAR . CC INTEGER CC UNI

    CC  shift, and go to state 71


state 52

   26 ATTR: NAME tFLOAT .
   27     | NAME tFLOAT . UNI

    UNI  shift, and go to state 72

    $default  reduce using rule 26 (ATTR)


state 53

   24 ATTR: NAME tINT .
   25     | NAME tINT . UNI

    UNI  shift, and go to state 73

    $default  reduce using rule 24 (ATTR)


state 54

   18 CREATE_S: CREATE TABLE NAME CC ATTRS DD . PRIM KEY CC NAME CC CC TM
   21 ATTRS: ATTRS DD . ATTR

    NAME  shift, and go to state 41
    PRIM  shift, and go to state 74

    ATTR  go to state 75


state 55

   19 CREATE_S: CREATE INDEX NAME ON NAME CC . NAME CC TM

    NAME  shift, and go to state 76


state 56

   11 SELECT_S: SELECT STAR FROM NAME WHERE TJS . TM
   14 TJS: TJS . AND TJ

    TM   shift, and go to state 77
    AND  shift, and go to state 70


state 57

   29 VALUE: STRING .

    $default  reduce using rule 29 (VALUE)


state 58

   30 VALUE: INTEGER .

    $default  reduce using rule 30 (VALUE)


state 59

   31 VALUE: FF .

    $default  reduce using rule 31 (VALUE)


state 60

   32 VALUESS: VALUE .

    $default  reduce using rule 32 (VALUESS)


state 61

   28 INSERT_S: INSERT INTO NAME VALUES CC VALUESS . CC TM
   33 VALUESS: VALUESS . DD VALUE

    DD  shift, and go to state 78
    CC  shift, and go to state 79


state 62

   35 FL: mLT .

    $default  reduce using rule 35 (FL)


state 63

   34 FL: mLE .

    $default  reduce using rule 34 (FL)


state 64

   36 FL: mEQ .

    $default  reduce using rule 36 (FL)


state 65

   39 FL: mGT .

    $default  reduce using rule 39 (FL)


state 66

   38 FL: mGE .

    $default  reduce using rule 38 (FL)


state 67

   37 FL: mNE .

    $default  reduce using rule 37 (FL)


state 68

   15 TJ: NAME FL . INTEGER
   16   | NAME FL . FF
   17   | NAME FL . STRING

    STRING   shift, and go to state 80
    INTEGER  shift, and go to state 81
    FF       shift, and go to state 82


state 69

   40 DELETE_S: DELETE FROM NAME WHERE TJS TM .

    $default  reduce using rule 40 (DELETE_S)


state 70

   14 TJS: TJS AND . TJ

    NAME  shift, and go to state 48

    TJ  go to state 83


state 71

   22 ATTR: NAME tCHAR CC . INTEGER CC
   23     | NAME tCHAR CC . INTEGER CC UNI

    INTEGER  shift, and go to state 84


state 72

   27 ATTR: NAME tFLOAT UNI .

    $default  reduce using rule 27 (ATTR)


state 73

   25 ATTR: NAME tINT UNI .

    $default  reduce using rule 25 (ATTR)


state 74

   18 CREATE_S: CREATE TABLE NAME CC ATTRS DD PRIM . KEY CC NAME CC CC TM

    KEY  shift, and go to state 85


state 75

   21 ATTRS: ATTRS DD ATTR .

    $default  reduce using rule 21 (ATTRS)


state 76

   19 CREATE_S: CREATE INDEX NAME ON NAME CC NAME . CC TM

    CC  shift, and go to state 86


state 77

   11 SELECT_S: SELECT STAR FROM NAME WHERE TJS TM .

    $default  reduce using rule 11 (SELECT_S)


state 78

   33 VALUESS: VALUESS DD . VALUE

    STRING   shift, and go to state 57
    INTEGER  shift, and go to state 58
    FF       shift, and go to state 59

    VALUE  go to state 87


state 79

   28 INSERT_S: INSERT INTO NAME VALUES CC VALUESS CC . TM

    TM  shift, and go to state 88


state 80

   17 TJ: NAME FL STRING .

    $default  reduce using rule 17 (TJ)


state 81

   15 TJ: NAME FL INTEGER .

    $default  reduce using rule 15 (TJ)


state 82

   16 TJ: NAME FL FF .

    $default  reduce using rule 16 (TJ)


state 83

   14 TJS: TJS AND TJ .

    $default  reduce using rule 14 (TJS)


state 84

   22 ATTR: NAME tCHAR CC INTEGER . CC
   23     | NAME tCHAR CC INTEGER . CC UNI

    CC  shift, and go to state 89


state 85

   18 CREATE_S: CREATE TABLE NAME CC ATTRS DD PRIM KEY . CC NAME CC CC TM

    CC  shift, and go to state 90


state 86

   19 CREATE_S: CREATE INDEX NAME ON NAME CC NAME CC . TM

    TM  shift, and go to state 91


state 87

   33 VALUESS: VALUESS DD VALUE .

    $default  reduce using rule 33 (VALUESS)


state 88

   28 INSERT_S: INSERT INTO NAME VALUES CC VALUESS CC TM .

    $default  reduce using rule 28 (INSERT_S)


state 89

   22 ATTR: NAME tCHAR CC INTEGER CC .
   23     | NAME tCHAR CC INTEGER CC . UNI

    UNI  shift, and go to state 92

    $default  reduce using rule 22 (ATTR)


state 90

   18 CREATE_S: CREATE TABLE NAME CC ATTRS DD PRIM KEY CC . NAME CC CC TM

    NAME  shift, and go to state 93


state 91

   19 CREATE_S: CREATE INDEX NAME ON NAME CC NAME CC TM .

    $default  reduce using rule 19 (CREATE_S)


state 92

   23 ATTR: NAME tCHAR CC INTEGER CC UNI .

    $default  reduce using rule 23 (ATTR)


state 93

   18 CREATE_S: CREATE TABLE NAME CC ATTRS DD PRIM KEY CC NAME . CC CC TM

    CC  shift, and go to state 94


state 94

   18 CREATE_S: CREATE TABLE NAME CC ATTRS DD PRIM KEY CC NAME CC . CC TM

    CC  shift, and go to state 95


state 95

   18 CREATE_S: CREATE TABLE NAME CC ATTRS DD PRIM KEY CC NAME CC CC . TM

    TM  shift, and go to state 96


state 96

   18 CREATE_S: CREATE TABLE NAME CC ATTRS DD PRIM KEY CC NAME CC CC TM .

    $default  reduce using rule 18 (CREATE_S)
